Added attachment graphics display among other features...

--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -63,7 +63,7 @@
     <Compile Include="GN_StatPart_Quality.cs" />
     <Compile Include="GN_Verb_Shoot.cs" />
     <Compile Include="HarmonyPatches.cs" />
-    <Compile Include="JobDriver_EquipAttachment - Copy.cs" />
+    <Compile Include="JobDriver_EquipAttachment.cs" />
     <Compile Include="JobDriver_RemoveAttachment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
