Improved attachment display
Attachment now has box graphic when on the ground. It is not correctly displayed in most states except in UI.

--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accuracy.cs" />
+    <Compile Include="AttachmentGraphicComp.cs" />
     <Compile Include="GN_Comps.cs" />
     <Compile Include="GN_Defs.cs" />
     <Compile Include="GN_StatPart_Quality.cs" />
