--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -58,14 +58,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accuracy.cs" />
-    <Compile Include="GN_Command.cs" />
-    <Compile Include="GN_Comps.cs" />
-    <Compile Include="GN_Defs.cs" />
+    <Compile Include="empty - Copy %282%29.cs" />
+    <Compile Include="empty - Copy %283%29.cs" />
+    <Compile Include="GN_ThingDef.cs" />
+    <Compile Include="Slot.cs" />
+    <Compile Include="GN_SlotDefOf.cs" />
+    <Compile Include="GN_StatPart_Attachment.cs" />
+    <Compile Include="Defs\DefsOf\GN_StatCegoryDefOf.cs" />
+    <Compile Include="CompProperties_GunNut.cs" />
+    <Compile Include="Defs\GN_AttachmentDef.cs" />
+    <Compile Include="GN_Command_VerbTarget.cs" />
+    <Compile Include="Defs\DefsOf\GN_ThingDefOf.cs" />
+    <Compile Include="WeaponStuff\GN_ThingComp.cs" />
+    <Compile Include="GN_AttachmentList.cs" />
     <Compile Include="GN_StatPart_Quality.cs" />
     <Compile Include="HarmonyPatches.cs" />
-    <Compile Include="JobDriver_EquipAttachment.cs" />
-    <Compile Include="JobDriver_RemoveAttachment.cs" />
+    <Compile Include="AI\JobDriver_EquipAttachment.cs" />
+    <Compile Include="AI\JobDriver_RemoveAttachment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="0Harmony.dll" />
