--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -57,29 +57,33 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accuracy.cs" />
-    <Compile Include="empty - Copy %282%29.cs" />
-    <Compile Include="empty - Copy %283%29.cs" />
-    <Compile Include="GN_ThingDef.cs" />
+    <Compile Include="HarmonyPatches\GN_GetDamageAmountPatch.cs" />
+    <Compile Include="HarmonyPatches\GN_TryStartCastOnPatch.cs" />
+    <Compile Include="HarmonyPatches\GN_ThingIconPatch.cs" />
+    <Compile Include="HarmonyPatches\GN_CreateVerbTargetCommand.cs" />
+    <Compile Include="HarmonyPatches\GN_DrawEquipmentAimingPatch.cs" />
+    <Compile Include="HarmonyPatches\Patch Helpers\GN_AdjustedAccuracyPatchHelper.cs" />
+    <Compile Include="HarmonyPatches\GN_PrintPatch.cs" />
+    <Compile Include="Defs\GN_WeaponDef.cs" />
     <Compile Include="Slot.cs" />
-    <Compile Include="GN_SlotDefOf.cs" />
-    <Compile Include="GN_StatPart_Attachment.cs" />
+    <Compile Include="Defs\DefsOf\GN_SlotDefOf.cs" />
+    <Compile Include="UI\GN_StatPart_Attachment.cs" />
     <Compile Include="Defs\DefsOf\GN_StatCegoryDefOf.cs" />
-    <Compile Include="CompProperties_GunNut.cs" />
+    <Compile Include="Comps\GN_AttachmentCompProperties.cs" />
     <Compile Include="Defs\GN_AttachmentDef.cs" />
-    <Compile Include="GN_Command_VerbTarget.cs" />
+    <Compile Include="UI\GN_Command_VerbTarget.cs" />
     <Compile Include="Defs\DefsOf\GN_ThingDefOf.cs" />
-    <Compile Include="WeaponStuff\GN_ThingComp.cs" />
-    <Compile Include="GN_AttachmentList.cs" />
-    <Compile Include="GN_StatPart_Quality.cs" />
-    <Compile Include="HarmonyPatches.cs" />
+    <Compile Include="Comps\GN_AttachmentComp.cs" />
+    <Compile Include="Comps\GN_AttachmentList.cs" />
+    <Compile Include="UI\GN_StatPart_Quality.cs" />
+    <Compile Include="HarmonyPatches\GN_HarmonyInitialise.cs" />
     <Compile Include="AI\JobDriver_EquipAttachment.cs" />
     <Compile Include="AI\JobDriver_RemoveAttachment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="0Harmony.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
