--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -57,6 +57,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\IR_Init.cs" />
+    <Compile Include="Data\IR_SlotsData.cs" />
     <Compile Include="HarmonyPatches\GN_GetDamageAmountPatch.cs" />
     <Compile Include="HarmonyPatches\GN_TryStartCastOnPatch.cs" />
     <Compile Include="HarmonyPatches\GN_ThingIconPatch.cs" />
@@ -82,6 +84,8 @@
   <ItemGroup>
     <Content Include="0Harmony.dll" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="HarmonyPatches\Base functionality\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
