--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -58,19 +58,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\IR_Init.cs" />
-    <Compile Include="Data\IR_SlotsData.cs" />
-    <Compile Include="HarmonyPatches\Base functionality\IR_SpecialDisplayStatsPatch.cs" />
-    <Compile Include="HarmonyPatches\GN_GetDamageAmountPatch.cs" />
-    <Compile Include="HarmonyPatches\GN_TryStartCastOnPatch.cs" />
+    <Compile Include="Data\IR_SlotsCords.cs" />
+    <Compile Include="HarmonyPatches\Display Patches\Stats Display Patches\IR_SpecialDisplayStatsPatch.cs" />
+    <Compile Include="HarmonyPatches\Stats Patches\GN_GetDamageAmountPatch.cs" />
+    <Compile Include="HarmonyPatches\Stats Patches\GN_TryStartCastOnPatch.cs" />
     <Compile Include="HarmonyPatches\Display Patches\GN_ThingIconPatch.cs" />
-    <Compile Include="HarmonyPatches\GN_CreateVerbTargetCommand.cs" />
+    <Compile Include="HarmonyPatches\Stats Patches\GN_CreateVerbTargetCommand.cs" />
     <Compile Include="HarmonyPatches\Display Patches\GN_DrawEquipmentAimingPatch.cs" />
-    <Compile Include="HarmonyPatches\Patch Helpers\GN_AdjustedAccuracyPatchHelper.cs" />
+    <Compile Include="HarmonyPatches\Stats Patches\GN_AdjustedAccuracyPatchHelper.cs" />
     <Compile Include="HarmonyPatches\Display Patches\GN_PrintPatch.cs" />
     <Compile Include="Defs\GN_WeaponDef.cs" />
     <Compile Include="Comps\GN_Slot.cs" />
     <Compile Include="Data\ModSettings\IR_Settings.cs" />
     <Compile Include="Data\ModSettings\IR_GunNutMod.cs" />
+    <Compile Include="IR_Textures.cs" />
     <Compile Include="UI\GN_StatPart_Attachment.cs" />
     <Compile Include="Defs\DefsOf\GN_StatCegoryDefOf.cs" />
     <Compile Include="Comps\GN_AttachmentCompProperties.cs" />
