Changed the name of enum responsible for attachment types

--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -67,36 +67,36 @@
     <Compile Include="Data\ModSettings\IR_SectionDrawer_Coordinator.cs" />
     <Compile Include="Data\ModSettings\IR_SectionDrawer.cs" />
     <Compile Include="Data\ModSettings\IR_SectionDrawer_WeaponTags.cs" />
-    <Compile Include="HarmonyPatches\Display Patches\Stats Display Patches\IR_SpecialDisplayStatsPatch.cs" />
-    <Compile Include="HarmonyPatches\IR_Patch_Helper.cs" />
-    <Compile Include="HarmonyPatches\Stats Patches\Damage\GN_GetDamageAmountPatch.cs" />
-    <Compile Include="HarmonyPatches\Stats Patches\GN_TryStartCastOnPatch.cs" />
-    <Compile Include="HarmonyPatches\Display Patches\GN_ThingIconPatch.cs" />
-    <Compile Include="HarmonyPatches\Stats Patches\GN_CreateVerbTargetCommand.cs" />
-    <Compile Include="HarmonyPatches\Display Patches\GN_DrawEquipmentAimingPatch.cs" />
-    <Compile Include="HarmonyPatches\Stats Patches\GN_AdjustedAccuracyPatchHelper.cs" />
-    <Compile Include="HarmonyPatches\Display Patches\GN_PrintPatch.cs" />
+    <Compile Include="Functionality\Display\UI\IR_SpecialDisplayStatsPatch.cs" />
+    <Compile Include="Data\IR_Patch_Helper.cs" />
+    <Compile Include="Functionality\Attachment Effects\Damage\GN_GetDamageAmountPatch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Warmup\GN_TryStartCastOnPatch.cs" />
+    <Compile Include="Functionality\Display\GN_ThingIconPatch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Accuracy\GN_CreateVerbTargetCommand.cs" />
+    <Compile Include="Functionality\Display\GN_DrawEquipmentAimingPatch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Accuracy\GN_AdjustedAccuracyPatchHelper.cs" />
+    <Compile Include="Functionality\Display\GN_PrintPatch.cs" />
     <Compile Include="AttachmentData\GN_Slot.cs" />
     <Compile Include="Data\ModSettings\IR_Settings.cs" />
     <Compile Include="Data\ModSettings\IR_GunNutMod.cs" />
-    <Compile Include="HarmonyPatches\Stats Patches\Zoom and NV Effects\IR_HitReportFor_Patch.cs" />
-    <Compile Include="HarmonyPatches\Stats Patches\Zoom and NV Effects\IR_HitReportGetString_Patch.cs" />
-    <Compile Include="HarmonyPatches\Stats Patches\Silencer Effect\IR_SilencerEffect_Patch.cs" />
-    <Compile Include="HarmonyPatches\Stats Patches\Silencer Effect\IR_SilencerEffect_Readout_Patch.cs" />
-    <Compile Include="IR_Textures.cs" />
-    <Compile Include="UI\GN_StatPart_Attachment.cs" />
+    <Compile Include="Functionality\Attachment Effects\Zoom and NV Effects\IR_HitReportFor_Patch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Zoom and NV Effects\IR_HitReportGetString_Patch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Silencer Effect\IR_SilencerEffect_Patch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Silencer Effect\IR_SilencerEffect_Readout_Patch.cs" />
+    <Compile Include="Data\IR_Textures.cs" />
+    <Compile Include="Functionality\Attachment Effects\Cooldown\GN_StatPart_Attachment.cs" />
     <Compile Include="Defs\DefsOf\GN_StatCegoryDefOf.cs" />
-    <Compile Include="Comps\AttachmentComp\GN_AttachmentCompProperties.cs" />
+    <Compile Include="Functionality\Comps\AttachmentComp\GN_AttachmentCompProperties.cs" />
     <Compile Include="Defs\GN_AttachmentDef.cs" />
-    <Compile Include="UI\GN_Command_VerbTarget.cs" />
-    <Compile Include="GN_WeaponParts.cs" />
-    <Compile Include="Comps\AttachmentComp\GN_AttachmentComp.cs" />
-    <Compile Include="UI\GN_StatPart_Quality.cs" />
-    <Compile Include="HarmonyPatches\GN_HarmonyInitialise.cs" />
-    <Compile Include="AI\JobDriver_EquipAttachment.cs" />
-    <Compile Include="AI\JobDriver_RemoveAttachment.cs" />
+    <Compile Include="Functionality\Display\UI\GN_Command_VerbTarget.cs" />
+    <Compile Include="AttachmentData\GN_WeaponParts.cs" />
+    <Compile Include="Functionality\Comps\AttachmentComp\GN_AttachmentComp.cs" />
+    <Compile Include="Functionality\Attachment Effects\Accuracy\GN_StatPart_Quality.cs" />
+    <Compile Include="Data\GN_HarmonyInitialise.cs" />
+    <Compile Include="Functionality\Comps\AttachmentComp\AI\JobDriver_EquipAttachment.cs" />
+    <Compile Include="Functionality\Comps\AttachmentComp\AI\JobDriver_RemoveAttachment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\IR_StatPart_Attachment_MarketValue.cs" />
+    <Compile Include="Functionality\Attachment Effects\Market Value\IR_StatPart_Attachment_MarketValue.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="0Harmony.dll" />
