Added new effect
- added effect for the attachments to allow the weapon to shoot more bullets per burst

--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Data\ModSettings\IR_SectionDrawer_Coordinator.cs" />
     <Compile Include="Data\ModSettings\IR_SectionDrawer.cs" />
     <Compile Include="Data\ModSettings\IR_SectionDrawer_WeaponTags.cs" />
+    <Compile Include="Functionality\Attachment Effects\Burst Shots Effect\IR_ExtraBurstShots_Patch.cs" />
     <Compile Include="Functionality\Display\UI\IR_SpecialDisplayStatsPatch.cs" />
     <Compile Include="Data\IR_Patch_Helper.cs" />
     <Compile Include="Functionality\Attachment Effects\Damage\GN_GetDamageAmountPatch.cs" />
