--- a/Source/GunNut/GunNut/GunNut.csproj
+++ b/Source/GunNut/GunNut/GunNut.csproj
@@ -68,14 +68,15 @@
     <Compile Include="Data\ModSettings\IR_SectionDrawer.cs" />
     <Compile Include="Data\ModSettings\IR_SectionDrawer_WeaponTags.cs" />
     <Compile Include="Functionality\Attachment Effects\Burst Shots Effect\IR_ExtraBurstShots_Patch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Fire Rate Effect\IR_FireRate_Patch.cs" />
     <Compile Include="Functionality\Display\UI\IR_SpecialDisplayStatsPatch.cs" />
     <Compile Include="Data\IR_Patch_Helper.cs" />
-    <Compile Include="Functionality\Attachment Effects\Damage\GN_GetDamageAmountPatch.cs" />
-    <Compile Include="Functionality\Attachment Effects\Warmup\GN_TryStartCastOnPatch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Damage\IR_GetDamageAmountPatch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Warmup\IR_TryStartCastOnPatch.cs" />
     <Compile Include="Functionality\Display\GN_ThingIconPatch.cs" />
-    <Compile Include="Functionality\Attachment Effects\Accuracy\GN_CreateVerbTargetCommand.cs" />
-    <Compile Include="Functionality\Display\GN_DrawEquipmentAimingPatch.cs" />
-    <Compile Include="Functionality\Attachment Effects\Accuracy\GN_AdjustedAccuracyPatchHelper.cs" />
+    <Compile Include="Functionality\Attachment Effects\Accuracy\IR_CreateVerbTargetCommand.cs" />
+    <Compile Include="Functionality\Display\IR_DrawEquipmentAimingPatch.cs" />
+    <Compile Include="Functionality\Attachment Effects\Accuracy\IR_AdjustedAccuracyPatchHelper.cs" />
     <Compile Include="Functionality\Display\GN_PrintPatch.cs" />
     <Compile Include="AttachmentData\GN_Slot.cs" />
     <Compile Include="Data\ModSettings\IR_Settings.cs" />
@@ -90,10 +91,10 @@
     <Compile Include="Functionality\Comps\AttachmentComp\GN_AttachmentCompProperties.cs" />
     <Compile Include="Defs\GN_AttachmentDef.cs" />
     <Compile Include="Functionality\Display\UI\GN_Command_VerbTarget.cs" />
-    <Compile Include="AttachmentData\GN_WeaponParts.cs" />
+    <Compile Include="AttachmentData\IR_AttachmentType.cs" />
     <Compile Include="Functionality\Comps\AttachmentComp\GN_AttachmentComp.cs" />
     <Compile Include="Functionality\Attachment Effects\Accuracy\GN_StatPart_Quality.cs" />
-    <Compile Include="Data\GN_HarmonyInitialise.cs" />
+    <Compile Include="Data\IR_HarmonyInitialise.cs" />
     <Compile Include="Functionality\Comps\AttachmentComp\AI\JobDriver_EquipAttachment.cs" />
     <Compile Include="Functionality\Comps\AttachmentComp\AI\JobDriver_RemoveAttachment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
